--- a/tiktok.ipynb
+++ b/tiktok.ipynb
@@ -2190,7 +2190,7 @@
    "id": "87ea70e5-3554-42ec-8aca-2c080365157e",
    "metadata": {},
    "source": [
-    "## Import aaw CSV files into data folder"
+    "## Import raw CSV files into data folder"
    ]
   },
   {
